grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

const dune_stanza = ($, name, field_parser) =>
  seq("(", alias(name, $.stanza_name), repeat(field_parser), ")");

const dune_field = ($, name, value) =>
  seq("(", alias(name, $.field_name), value, ")");

const dune_osl = (element, self) =>
  choice(repeat1(element), seq("(", optional(self), ")"));

const dune_action = ($, name, value) =>
  seq("(", alias(name, $.action_name), value, ")");

const PREC = { COMMENT: 0, STRING: 1 };

module.exports = grammar({
  name: "dune",

  extras: ($) => [$.comment, /\s+/],

  rules: {
    source_file: ($) => repeat($.stanza),
    sexp: ($) => choice($._atom_or_qs, $.list),
    sexps1: ($) => repeat1($.sexp),
    _atom_or_qs: ($) => choice($.atom, $.quoted_string, $.multiline_string),
    quoted_string: ($) => seq('"', repeat($._quoted_string_char), '"'),
    multiline_string: ($) => /"\\[\|>].*\n/,
    _quoted_string_char: ($) =>
      token.immediate(
        prec(
          PREC.STRING,
          choice(/[^\\"]/, seq("\\", choice("n", "\n", "r", '"', "\\"))),
        ),
      ),
    atom: ($) => /[^;()"\s]+/,
    list: ($) => seq("(", repeat($.sexp), ")"),
    comment: ($) => token(prec(PREC.COMMENT, /;.*/)),
    stanza: ($) =>
      choice($._stanza_executable, $._stanza_rule, $._stanza_library, $.sexp),
    _stanza_executable: ($) =>
      dune_stanza($, "executable", choice($._field_buildable, $.sexp)),
    _field_buildable: ($) =>
      choice(
        dune_field($, "name", $.module_name),
        dune_field($, "public_name", $.public_name),
        dune_field($, "libraries", repeat($._lib_dep)),
        dune_field($, "modules", optional($._modules_osl)),
        dune_field($, "enabled_if", $.blang),
      ),
    _modules_osl: ($) => dune_osl($.module_name, $._modules_osl),
    _lib_dep: ($) =>
      choice(
        $.library_name,
        dune_field($, "re_export", $.library_name),
        dune_field($, "select", $.sexps1),
      ),
    library_name: ($) => alias($._atom_or_qs, "library_name"),
    public_name: ($) => alias($._atom_or_qs, "public_name"),
    module_name: ($) => alias($._atom_or_qs, "module_name"),
    file_name: ($) => alias($._atom_or_qs, "file_name"),
    package_name: ($) => $._atom_or_qs,
    shell_command: ($) => alias($._atom_or_qs, "shell_command"),
    _stanza_rule: ($) =>
      dune_stanza(
        $,
        "rule",
        choice(
          $.action,
          dune_field($, "mode", $.sexp),
          dune_field($, "target", $._atom_or_qs),
          dune_field($, "targets", repeat($._target)),
          dune_field($, "deps", $.sexps1),
          dune_field($, "action", $.action),
          dune_field($, "enabled_if", $.blang),
          dune_field($, "alias", repeat1($.alias_name)),
          dune_field($, "package", $.package_name),
          $.sexp,
        ),
      ),
    _target: ($) => choice($.file_name, seq("(", "dir", $.file_name, ")")),
    blang: ($) =>
      choice($._atom_or_qs, seq("(", $.blang_op, repeat1($.blang), ")")),
    blang_op: ($) => choice("=", "<>", ">", "<=", "or", "and"),
    field_name: ($) => $._atom_or_qs,
    alias_name: ($) => $._atom_or_qs,
    action: ($) =>
      choice(
        dune_action($, "bash", $.shell_command),
        dune_action($, "cat", $.file_name),
        dune_action($, "chdir", seq($.file_name, $.action)),
        dune_action($, "copy", seq($.file_name, $.file_name)),
        dune_action($, "copy#", seq($.file_name, $.file_name)),
        dune_action($, "diff", seq($.file_name, $.file_name)),
        dune_action($, "diff?", seq($.file_name, $.file_name)),
        dune_action($, "echo", $._atom_or_qs),
        dune_action($, "no-infer", $.action),
        dune_action($, "pipe-outputs", repeat1($.action)),
        dune_action($, "progn", repeat($.action)),
        dune_action($, "run", repeat1($._atom_or_qs)),
        dune_action($, "setenv", seq($._atom_or_qs, $._atom_or_qs, $.action)),
        dune_action($, "system", $.shell_command),
        dune_action($, "with-outputs-to", seq($.file_name, $.action)),
        dune_action($, "with-stderr-to", seq($.file_name, $.action)),
        dune_action($, "with-stdout-to", seq($.file_name, $.action)),
        dune_action($, "write-file", seq($.file_name, $._atom_or_qs)),
      ),
    _stanza_library: ($) =>
      dune_stanza(
        $,
        "library",
        choice(
          $._field_buildable,
          dune_field($, "synopsis", $._atom_or_qs),
          dune_field($, "instrumentation", $.sexp),
          $.sexp,
        ),
      ),
  },
});
