test/corpus/stanzas.txt
==========
Executable
==========

(executable
 (name e)
 (public_name p)
 (libraries a b c))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (module_name
      (atom))
    (field_name)
    (public_name
      (atom))
    (field_name)
    (library_name
      (atom))
    (library_name
      (atom))
    (library_name
      (atom))))

====
Rule
====

(rule
 (mode promote)
 (alias runtest)
 (targets setup.defaults.ml)
 (deps
  (:configure %{project_root}/boot/configure.ml))
 (action
  (chdir
   %{project_root}
   (setenv
    DUNE_CONFIGURE_OUTPUT
    "src/dune_rules/setup.defaults.ml"
    (run %{ocaml} %{configure})))))

(rule
 (mode promote)
 (target assets.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let jbuild_plugin_ml = {jbp|\n")
    (cat %{project_root}/plugin/jbuild_plugin.ml)
    (echo "|jbp}\n\n")
    (echo "let jbuild_plugin_mli = {jbp|")
    (cat %{project_root}/plugin/jbuild_plugin.mli)
    (echo "|jbp}")))))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (sexp
      (atom))
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))
    (field_name)
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))
    (field_name)
    (action
      (sexp
        (list
          (sexp
            (atom))
          (sexp
            (atom))
          (sexp
            (list
              (sexp
                (atom))
              (sexp
                (atom))
              (sexp
                (quoted_string))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (atom))
                  (sexp
                    (atom))))))))))
  (stanza
    (stanza_name)
    (field_name)
    (sexp
      (atom))
    (field_name)
    (atom)
    (field_name)
    (action
      (sexp
        (list
          (sexp
            (atom))
          (sexp
            (atom))
          (sexp
            (list
              (sexp
                (atom))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (quoted_string))))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (atom))))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (quoted_string))))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (quoted_string))))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (atom))))
              (sexp
                (list
                  (sexp
                    (atom))
                  (sexp
                    (quoted_string)))))))))))

=======
Library
=======

(library
 (name dune_rules)
 (libraries stdune fs unix)
 (modules sha1)
 (synopsis "Internal Dune library, do not use!")
 (instrumentation
  (backend bisect_ppx)))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (module_name
      (atom))
    (field_name)
    (library_name
      (atom))
    (library_name
      (atom))
    (library_name
      (atom))
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))
    (field_name)
    (quoted_string)
    (field_name)
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))))

==========
enabled_if
==========

(rule
 (target flags.sexp)
 (enabled_if
  (= %{os_type} "Win32"))
 (action
  (with-stdout-to
   %{target}
   (echo "(-DUNICODE -D_UNICODE)"))))

(rule
 (target flags.sexp)
 (enabled_if
  (<> %{os_type} "Win32"))
 (action
  (with-stdout-to
   %{target}
   (echo "()"))))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (atom)
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (list
            (sexp
              (atom))
            (sexp
              (atom))
            (sexp
              (quoted_string))))))
    (field_name)
    (action
      (sexp
        (list
          (sexp
            (atom))
          (sexp
            (atom))
          (sexp
            (list
              (sexp
                (atom))
              (sexp
                (quoted_string))))))))
  (stanza
    (stanza_name)
    (field_name)
    (atom)
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (list
            (sexp
              (atom))
            (sexp
              (atom))
            (sexp
              (quoted_string))))))
    (field_name)
    (action
      (sexp
        (list
          (sexp
            (atom))
          (sexp
            (atom))
          (sexp
            (list
              (sexp
                (atom))
              (sexp
                (quoted_string)))))))))

========
comments
========

(library
  (name        opam_repository)
  (libraries   unix (re_export opam_format))
  (wrapped     false))

---

(source_file
  (stanza
    (stanza_name)
    (field_name)
    (module_name
      (atom))
    (field_name)
    (library_name
      (atom))
    (field_name)
    (library_name
      (atom))
    (sexp
      (list
        (sexp
          (atom))
        (sexp
          (atom))))))
